fix: correct spelling of "OAuth" in Arabic localization file

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -84,7 +84,7 @@
   "restore-database": "استعادة قاعدة البيانات",
   "restore-the-database": "استعادة قاعدة البيانات",
   "tester-name": "اسم اختبار",
-  "oauth-ids": "معرفات OAUTH",
+  "oauth-ids": "معرفات OAuth",
   "no-data-available": "لا توجد بيانات متاحة",
   "error-fetching-data": "خطأ جلب البيانات"
 }
