--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -85,5 +85,13 @@
   "tester-name": "Tester Name",
   "oauth-ids": "OAuth IDs",
   "no-data-available": "No data available",
-  "error-fetching-data": "Error fetching data"
+  "error-fetching-data": "Error fetching data",
+  "description": "Description",
+  "id": "id",
+  "date": "Date",
+  "order": "Order",
+  "amount": "Amount",
+  "purchases-not-refunded": "Purchases not refunded",
+  "in-one-place": "in one place.",
+  "manage-all-your": "Manage all your"
 }
