--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -106,5 +106,13 @@
   "id": "identificación",
   "publish-feedback": "Publicar comentarios",
   "refund": "Reembolso",
-  "purchases-refunded": "Compras reembolsadas y no reembolsadas"
+  "purchases-refunded": "Compras reembolsadas y no reembolsadas",
+  "enter-your-feedback-here": "Ingrese sus comentarios aquí ...",
+  "submit-feedback": "Enviar comentarios",
+  "add-feedback": "Agregar retroalimentación",
+  "please-upload-screenshot": "Sube una captura de pantalla",
+  "error-publishing-feedback": "Error al publicar sus comentarios",
+  "publish": "Cambio para publicar",
+  "upload-screenshot-instruction": "Seleccione o pegue la captura de pantalla de retroalimentación",
+  "select-date": "Fecha de creación de comentarios"
 }
