--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -106,5 +106,13 @@
   "id": "תְעוּדַת זֶהוּת",
   "publish-feedback": "לפרסם משוב",
   "refund": "הֶחזֵר",
-  "purchases-refunded": "רכישות שהוחזרו ולא הוחזרו"
+  "purchases-refunded": "רכישות שהוחזרו ולא הוחזרו",
+  "enter-your-feedback-here": "הזן את המשוב שלך כאן ...",
+  "submit-feedback": "הגש משוב",
+  "add-feedback": "הוסף משוב",
+  "please-upload-screenshot": "אנא העלה צילום מסך",
+  "error-publishing-feedback": "שגיאה בעת פרסום המשוב שלך",
+  "publish": "שינוי לפרסום",
+  "upload-screenshot-instruction": "בחר או הדבק את צילום המסך של המשוב",
+  "select-date": "תאריך יצירת משוב"
 }
