fix: update translation strings for screenshot upload instructions in Spanish and French

--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -113,6 +113,6 @@
   "please-upload-screenshot": "Sube una captura de pantalla",
   "error-publishing-feedback": "Error al publicar sus comentarios",
   "publish": "Cambio para publicar",
-  "upload-screenshot-instruction": "Seleccione o pegue la captura de pantalla de retroalimentación",
+  "upload-screenshot-instruction": "Seleccione o pegue la captura de pantalla de la publicacion",
   "select-date": "Fecha de creación de comentarios"
 }
