--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -144,5 +144,10 @@
   "purchase-created-successfully": "购买成功创建",
   "purchase-date": "购买日期",
   "receipt-screenshot": "收据屏幕截图",
-  "receipt-screenshot-required": "收据屏幕快照"
+  "receipt-screenshot-required": "收据屏幕快照",
+  "add-oauth-id-to": "添加OAuth ID",
+  "error-adding-oauth-id": "错误添加OAuth ID",
+  "oauth-id-added-successfully": "Oauth ID成功添加了",
+  "oauth-id-format-hint": "OAuth ID格式提示",
+  "please-enter-valid-oauth-id": "请输入有效的OAuth ID"
 }
