fix: correct French translation for 'actions' in locale file

--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -97,7 +97,7 @@
   "error-missing-unique-key": "La clé unique {{key}} est manquante",
   "yes": "Oui",
   "no": "Non",
-  "actions": "Actes",
+  "actions": "Actions",
   "refunded": "Remboursé",
   "hasFeedback": "Avis",
   "hasPublication": "Publié",
