fix: update French translations and adjust layout for better responsiveness

--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -106,7 +106,7 @@
   "id": "identifiant",
   "publish-feedback": "Publier des commentaires",
   "refund": "Remboursement",
-  "purchases-refunded": "Achats remboursés et non remboursés",
+  "purchases-refunded": "Tous les achats",
   "enter-your-feedback-here": "Entrez vos commentaires ici…",
   "submit-feedback": "Soumettre des commentaires",
   "add-feedback": "Ajouter des commentaires",
