fix: update page title and descriptions for better clarity; localize 'Vite + HeroUI' to reflect feedback management

--- a/client/src/locales/base/ar-SA.json
+++ b/client/src/locales/base/ar-SA.json
@@ -6,7 +6,7 @@
   "github": "جيتهاب",
   "switch-to-dark-mode": "التبديل إلى الوضع الداكن",
   "switch-to-light-mode": "التبديل إلى الوضع الفاتح",
-  "vite-heroui": "فايت + هيرويو",
+  "vite-heroui": "كاختبار ، تدير كل التعليقات التي تقوم بها",
   "make-beautiful-websites-regardless-of-your-design-experience": "إنشاء مواقع ويب جميلة بغض النظر عن خبرتك في التصميم.",
   "home": "الرئيسية",
   "docs": "المستندات",
