--- a/client/src/locales/base/en-US.json
+++ b/client/src/locales/base/en-US.json
@@ -6,7 +6,7 @@
   "github": "GitHub",
   "switch-to-dark-mode": "Switch to dark mode",
   "switch-to-light-mode": "Switch to light mode",
-  "vite-heroui": "Vite + HeroUI",
+  "vite-heroui": "As a tester manage all you feedbacks",
   "make-beautiful-websites-regardless-of-your-design-experience": "Make beautiful websites regardless of your design experience.",
   "home": "Home",
   "docs": "Docs",
