--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -6,7 +6,7 @@
   "github": "GitHub",
   "switch-to-dark-mode": "Cambiar a modo oscuro",
   "switch-to-light-mode": "Cambiar a modo claro",
-  "vite-heroui": "Vite + HeroUI",
+  "vite-heroui": "Como probador, administre todos sus comentarios",
   "make-beautiful-websites-regardless-of-your-design-experience": "Crea sitios web hermosos sin importar su experiencia en diseño.",
   "home": "Inicio",
   "docs": "Documentación",
