--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -6,7 +6,7 @@
   "github": "GitHub",
   "switch-to-dark-mode": "Passer au mode sombre",
   "switch-to-light-mode": "Passer au mode clair",
-  "vite-heroui": "Vite + HeroUI",
+  "vite-heroui": "En tant que testeur, gérez tous les commentaires",
   "make-beautiful-websites-regardless-of-your-design-experience": "Créez de beaux sites web quelle que soit votre expérience en design.",
   "home": "Accueil",
   "docs": "Documentation",
