--- a/client/src/locales/base/he-IL.json
+++ b/client/src/locales/base/he-IL.json
@@ -6,7 +6,7 @@
   "github": "גיטהאב",
   "switch-to-dark-mode": "עבור למצב כהה",
   "switch-to-light-mode": "עבור למצב בהיר",
-  "vite-heroui": "Vite + HeroUI",
+  "vite-heroui": "כבוחן נהל את כל המשוב שלך",
   "make-beautiful-websites-regardless-of-your-design-experience": "צור אתרים מרהיבים ללא קשר לניסיון העיצוב שלך.",
   "home": "בית",
   "docs": "מסמכים",
