--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -6,7 +6,7 @@
   "github": "GitHub",
   "switch-to-dark-mode": "切换到深色模式",
   "switch-to-light-mode": "切换到浅色模式",
-  "vite-heroui": "Vite + HeroUI",
+  "vite-heroui": "作为测试人员管理您的所有反馈",
   "make-beautiful-websites-regardless-of-your-design-experience": "无论您的设计经验如何，都能制作精美的网站。",
   "home": "首页",
   "docs": "文档",
