--- a/client/src/locales/base/fr-FR.json
+++ b/client/src/locales/base/fr-FR.json
@@ -149,5 +149,6 @@
   "error-adding-oauth-id": "Erreur ajoutant ID OAuth",
   "oauth-id-added-successfully": "OAuth ID a ajouté avec succès",
   "oauth-id-format-hint": "Indice de format d'identification OAuth",
-  "please-enter-valid-oauth-id": "Veuillez saisir un identifiant OAuth valide"
+  "please-enter-valid-oauth-id": "Veuillez saisir un identifiant OAuth valide",
+  "api-server": "Serveur API"
 }
