--- a/client/src/locales/base/es-ES.json
+++ b/client/src/locales/base/es-ES.json
@@ -149,5 +149,6 @@
   "error-adding-oauth-id": "Error agregar OAuth ID",
   "oauth-id-added-successfully": "OAUTH ID agregado con éxito",
   "oauth-id-format-hint": "Formato de identificación de OAuth Sugerencia",
-  "please-enter-valid-oauth-id": "Ingrese una ID de OAuth válida"
+  "please-enter-valid-oauth-id": "Ingrese una ID de OAuth válida",
+  "api-server": "Servidor API"
 }
