--- a/client/src/locales/base/zh-CN.json
+++ b/client/src/locales/base/zh-CN.json
@@ -149,5 +149,6 @@
   "error-adding-oauth-id": "错误添加OAuth ID",
   "oauth-id-added-successfully": "Oauth ID成功添加了",
   "oauth-id-format-hint": "OAuth ID格式提示",
-  "please-enter-valid-oauth-id": "请输入有效的OAuth ID"
+  "please-enter-valid-oauth-id": "请输入有效的OAuth ID",
+  "api-server": "API服务器"
 }
